--- a/final-report/meth.tex
+++ b/final-report/meth.tex
@@ -3,7 +3,8 @@
 % Intuition - why should it be better than the state of the art?
 % Description of its algorithms
 
-
+In this section, we overview all types of noise that we have introduced into
+each model (LR, MLP, and LeNet) in our experiments.
 
 \subsection{Adding Noise into Logistic Regression}
 We first introduce noise into gradient descent component
