--- a/final-report/con.tex
+++ b/final-report/con.tex
@@ -12,7 +12,12 @@ fluctuation of accuracy;
 noise better than simple neural network models;
 (3) Sometimes adding noise can improve not only accuracy but also
 convergence rate.
-We hope that our experiment results can provide insight into future design
+We hope that this experimental study can provide insights into future design
 of deep learning neural network models and machine learning hardwares.
 
-Beyond this project
+Beyond this project, we hope to pursue three major research directions: (1)
+Conduct more thorough experiments that quantitatively analyze the effect of
+noise on deep learning models; (2) Provide theoretical explanation for the
+effect of noise on deep learning models based on our experiment results and
+findings; (3) Design and explore more efficient computer hardware and systems
+for deep learning models.
