--- a/final-report/con.tex
+++ b/final-report/con.tex
@@ -14,5 +14,7 @@ noise better than simple neural network models;
 convergence rate.
 We hope that our experiment results can provide insight into future design
 of deep learning neural network models and machine learning hardwares.
+Next generation machine learning hardwares can fully exploit the results that
 
-Beyond this project
+
+Beyond this project, we plan to quantify our
